--- a/processor-kotlin/pom.xml
+++ b/processor-kotlin/pom.xml
@@ -19,9 +19,9 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>javax.websocket</groupId>
-            <artifactId>javax.websocket-api</artifactId>
-            <version>1.1</version>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>1.3.8</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
