--- a/actor-api-kotlin/pom.xml
+++ b/actor-api-kotlin/pom.xml
@@ -14,6 +14,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.3</version>
+    </dependency>
+    <dependency>
       <groupId>de.bwueller.environment</groupId>
       <artifactId>protocol</artifactId>
       <version>1.0-SNAPSHOT</version>
