--- a/demo-js/package.json
+++ b/demo-js/package.json
@@ -13,7 +13,8 @@
     "howler": "^2.0.9",
     "protobufjs": "~6.8.6",
     "vue": "^2.5.16",
-    "vue-resource": "^1.5.0"
+    "vue-resource": "^1.5.0",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.9",
